Sat Jan 25 22:17:02 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* README.ja.md, README.md: update the controller address of
	  mailing lists.

Sat Jan 25 14:50:42 2014  Eric Wong  <normalperson@yhbt.net>

	* process.c (send_child_error): retry write on EINTR to fix
	  occasional Errno::EINTR from Process.spawn.

	* process.c (recv_child_error): retry read on EINTR to fix
	  occasional Errno::EINTR from Process.spawn.

Sat Jan 25 14:21:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): result of assignment should be
	  its rhs instead of returned value from a method.
	  [ruby-core:60071] [Bug #9448]

Sat Jan 25 11:16:19 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_extract_keywords): treat nil keyword_hash same as 0,
	  for the case rb_scan_args returns nil if no keyword hash.

Fri Jan 24 15:13:20 2014  Zachary Scott  <e@zzak.io>

	* lib/racc/rdoc/grammar.en.rdoc: [DOC] Correct grammar and typos
	  Patch by Giorgos Tsiftsis [Bug #9429] [ci skip]

Thu Jan 23 20:20:17 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/envutil.rb: try to wait a bit (0.1sec) when ruby process
	  exits by signals because some SEGV tests fail because of not enough
	  error output.

Thu Jan 23 20:06:27 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: check the target thread.

Thu Jan 23 19:59:16 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: check the target thread.

Thu Jan 23 14:26:44 2014  Zachary Scott  <e@zzak.io>

	* lib/fileutils.rb: [DOC] Fix typo in options_of() example [Bug #9392]
	  Patch by Giorgos Tsiftsis

Thu Jan 23 13:56:16 2014  Zachary Scott  <e@zzak.io>

	* README -> README.md: [DOC] Format README with Markdown [Bug #9255]
	* README.ja -> README.ja.md: ditto

Wed Jan 22 15:59:39 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread/thread.c (Init_thread): ConditionVariable and Queue
	  are not able to copy.  [ruby-core:59961] [Bug #9440]
